<resources>
    <string name="app_name">TP2</string>
    <string name="welcome_message">Bonjour tout le monde</string>
    <string name="login">Login</string>
    <string name="login_placeHolder">Enter your username</string>
    <string name="password">Mot de passe</string>
    <string name="password_placeHolder">Enter your password</string>
    <string name="connect">CONNECTER</string>
    <string name="new_account">Nouveau Compte</string>
    <string name="about">à propos</string>
    <string name="add_etab">Ajouter un établissement</string>
    <string name="del_etab">Supprimer un établissement</string>
    <string name="menu_a_choix">Menu a choix</string>
</resources>