<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_welcomeMSG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="88dp"
        android:layout_marginRight="50dp"
        android:text="@string/welcome_message"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:ems="10"
        android:hint="@string/login_placeHolder"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_welcomeMSG" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:ems="10"
        android:hint="@string/password_placeHolder"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_login" />

    <TextView
        android:id="@+id/textView_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_login"
        app:layout_constraintEnd_toEndOf="@id/textView_password"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintRight_toRightOf="@id/textView_password" />
    />

    <TextView
        android:id="@+id/textView_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/password"
        android:textColor="#FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_password"
        app:layout_constraintEnd_toStartOf="@+id/editText_password"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintRight_toRightOf="@id/textView_login"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_Connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:paddingLeft="25dp"
        android:paddingTop="10dp"
        android:paddingRight="25dp"
        android:paddingBottom="10dp"
        android:text="@string/connect"
        app:layout_constraintStart_toStartOf="@+id/editText_password"
        app:layout_constraintTop_toBottomOf="@+id/editText_password" />

    <TextView
        android:id="@+id/textView_newAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:clickable="true"
        android:selectAllOnFocus="true"
        android:text="@string/new_account"
        android:textColor="@color/couleurs"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toStartOf="@id/button_Connect"
        app:layout_constraintTop_toBottomOf="@+id/button_Connect" />

</androidx.constraintlayout.widget.ConstraintLayout>